worked on predash to dashboard transition logic

--- a/views/predash.ejs
+++ b/views/predash.ejs
@@ -136,10 +136,10 @@
                   <label for="thursday">Thursday</label>
 
                   <input type="checkbox" id="friday" name="daysAvailable[]" value="fri" />
-                  <label for="mothman">Friday</label>
+                  <label for="friday">Friday</label>
 
                   <input type="checkbox" id="saturday" name="daysAvailable[]" value="sat" />
-                  <label for="mothman">Saturday</label>
+                  <label for="saturday">Saturday</label>
               </fieldset>
             </div>  
               
@@ -150,7 +150,7 @@
                   <label for="early">Early Morning (<7am)</label>
 
                   <input type="checkbox" id="morning" name="timesAvailable[]" value="early">
-                  <label for="monday">Morning (8am-11am)</label>
+                  <label for="morning">Morning (8am-11am)</label>
 
                   <input type="checkbox" id="afternoon" name="timesAvailable[]" value="mid">
                   <label for="afternoon">Afternoon (12pm-3pm)</label>
@@ -159,7 +159,7 @@
                   <label for="evening">Evening(4pm-7pm)</label>
 
                   <input type="checkbox" id="late" name="timesAvailable[]" value="veryLate" />
-                  <label for="thursday">Late Night(8pm<)</label>
+                  <label for="late">Late Night(8pm<)</label>
               </fieldset>
             </div>
                                       
