organized routes, but have issues with form submission

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') -%>
 <html>
 <body>
-    <h1>Landing</h1>   
+    <h1>Landing</h1>
+    <a href="/auth/login"><button>LogIn</button></a>   
 </body>
 </html>
