adding tailwind and working on workout tracker

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,21 +4,20 @@
     <div>
         <h1>Dashboard</h1>
         <a href="/auth/logout"><button>LogOut</button></a>
-        <a href="">
-            <div>
-
-            </div>
+    </div>
+        <section>
+                <h2>Fitness Tracker</h2>
+                <a href="/fit"><button>See More</button></a>
+        </section>
+        <section>
+                <h2>Diet Tracker</h2>
+                <a href="/diet"><button>See More</button></a>
+        </section>
+        <section>
+                <h2>Workout Tracker</h2>
+                <a href="/workout"><button>See More</button></a>
+        </section>
         </a>
-        <a href="">
-            <div>
-
-            </div>
-        </a>
-        <a href="">
-            <div>
-
-            </div>
-        </a>
-    </div>   
+   
 </body>
 </html>
